# com.github.hoelzro-lua-term

./: .build  .build01_windows32.sh  .build02_windows64.sh  .build03_linux.sh  .build04_artefacts.sh  .build_common.sh  .lxc_build_artefacts.sh  .lxc_build_ubuntu_1404_x64.sh  .lxc_build_ubuntu_1404_x86.sh  .lxc_build_ubuntu_1604_x64.sh  .lxc_build_ubuntu_1604_x86.sh  .lxc_build_ubuntu_1704_x64.sh  .lxc_build_ubuntu_1704_x86.sh  .lxc_build_ubuntu_1710_x64.sh  .lxc_build_ubuntu_1710_x86.sh  .lxc_build_windows.sh  CMakeLists.txt  Jenkinsfile  build_artifact.py
.github/workflows/: main.yml
lua-term/: CMakeLists.txt
lua-term/copy-over/: CMakeLists.txt
lua-term/installer/lua5.1/: CMakeLists.txt  lua-term.xml
lua-term/installer/lua5.2/: CMakeLists.txt  install.lua  lua-term.xml
lua-term/installer/lua5.3/: CMakeLists.txt  lua-term.xml
lua-term/installer/lua5.4/: lua-term.xml
